# poulpe_ethercat_controller

./: .gitattributes  .gitignore  .rustfmt.toml  Cargo.toml  README.md  emergecy_stop.sh  start_ethercat_server.sh  upload_firmware.sh
.github/: CONTRIBUTING.md
.github/workflows/: Compute-Tag.yml  build_server.yml  build_server_and_tag.yml  jekyll-gh-pages.yml  rust.yml
config/: LeftElbowOrbita2d.yaml  LeftShoulderOrbita2d.yaml  LeftWristOrbita3d.yaml  NeckOrbita3d.yaml  README.md  RightElbowOrbita2d.yaml  RightShoulderOrbita2d.yaml  RightWristOrbita3d.yaml  epos-config.yaml  ethercat.yaml  orbita-epos-config.yaml  orbita2d.yaml  orbita3d.yaml  orbitas.yaml  orbitas_tree.yaml  robot.yaml  test_left_arm.yaml  test_right_arm.yaml
config/esi/: Orbita2d.xml  Orbita3d.xml  README.md  epos-single-axis-abs-encoder.xml  maxon.esi  orbita2d.xml  orbita3d.xml  orbitas.xml
config/esi/reachy2/: LeftElbowOrbita2d.xml  LeftShoulderOrbita2d.xml  LeftWristOrbita3d.xml  NeckOrbita3d.xml  README.md  RightElbowOrbita2d.xml  RightShoulderOrbita2d.xml  RightWristOrbita3d.xml  compile_esi.sh  generate_robot_esi_files.py
config/esi/reachy2/firmware1.0/: LeftElbowOrbita2d.xml  LeftShoulderOrbita2d.xml  NeckOrbita3d.xml  README.md
config/esi/reachy2/firmware1.5/: LeftElbowOrbita2d.xml  LeftShoulderOrbita2d.xml  LeftWristOrbita3d.xml  NeckOrbita3d.xml  README.md  RightElbowOrbita2d.xml  RightShoulderOrbita2d.xml  RightWristOrbita3d.xml  generate_robot_esi_files.py
config/esi/robot/: LeftShoulderOrbita2d.xml  README.md  RightShoulderOrbita2d.xml  generate_robot_esi_files.py
config/esi_generator/: esi_directly.py  esi_from_yaml.py  ethercat_esi_generator.py
docs/: .gitignore  Gemfile  README.md  _config.yaml  configure_poulpe.md  env.yaml  ethercat.drawio  first_steps.md  index.md  installation_ethercat.md  message.txt  safety_features.md  update_firmware_over_ethercat.md
docs/ethercat/: firmware_1_0.md  firmware_1_5.md  index.md
docs/examples/: grpc.md  index.md  standalone.md
docs/images/: ethercat.drawio  grpc.drawio
docs/installation/: configure_poulpe.md  index.md  installation_ethercat.md  python_client.md
docs/software/: config.md  ethercat_controller.md  index.md  poulpe_ethercat_controller.md  poulpe_ethercat_grpc.md  python_client.md
epos_ethercat_controller/: Cargo.toml
epos_ethercat_controller/examples/: motor_copy_mode.rs  show.rs  sinusoid.rs  square.rs
epos_ethercat_controller/src/: lib.rs
epos_ethercat_multiplexer/: Cargo.toml  build.rs
epos_ethercat_multiplexer/examples/: client.rs  grpc_client.rs
epos_ethercat_multiplexer/proto/: epos.proto
epos_ethercat_multiplexer/src/: client.rs  lib.rs  main.rs  server.rs
ethercat_controller/: Cargo.toml  README.md
ethercat_controller/examples/: poulpe_read_states.rs  poulpe_sinus.rs  poulpe_test.rs  scan_network.rs
ethercat_controller/src/: config.rs  ethercat_controller.rs  ethercat_controller.rs.old  ethercat_controller.rs.tokio  ethercat_patch.rs  lib.rs  mailboxes.rs  watchdog.rs
ethercat_master/: README.md  config.h
poulpe_ethercat_controller/: Cargo.toml  README.md
poulpe_ethercat_controller/examples/: motor_copy_mode.rs  sinusoid.rs  sinusoid_check_valid.rs  square.rs
poulpe_ethercat_controller/src/: lib.rs  register.rs  state_machine.rs
poulpe_ethercat_grpc/: Cargo.toml  README.md  build.rs
poulpe_ethercat_grpc/examples/: client_get_state.rs  client_listener.rs  client_motor_copy.rs  client_sinus.rs
poulpe_ethercat_grpc/proto/: poulpe.proto
poulpe_ethercat_grpc/src/: client.rs  server.rs
poulpe_ethercat_multiplexer/: Cargo.toml
poulpe_ethercat_multiplexer/examples/: client_motor_copy.rs  client_sinus.rs
poulpe_ethercat_multiplexer/proto/: poulpe.proto
poulpe_ethercat_multiplexer/src/: client.rs  lib.rs  server.rs
python_client/: .gitignore  .rustc_info.json  Cargo.toml  README.md
python_client/notebooks/: orbita2d_test_assembly.ipynb  orbita3d_test_assembly.ipynb  poulpe_test.ipynb
python_client/notebooks/.ipynb_checkpoints/: poulpe_test-checkpoint.ipynb
python_client/scripts/: connect_to_server.py  orbita2d_test_assembly.py  orbita3d_test_assembly.py  plot_test_data.py  read_orbita_zeros.py
python_client/src/: lib.rs
src/: epos_controller.rs  ethercat_controller.rs  lib.rs  main.rs
tests/: epos-3axis.xml
