[package]
name = "ethercat_controller"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethercat = "0.2.2"
ethercat-esi = "0.2.0"
log = "0.4.17"
env_logger = "0.9.0"
bitvec = "1.0.1"
num-derive = "0.3.3"
num = "0.4.0"
num-traits = "0.2.15"
