[package]
name = "ethercat_controller"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethercat = "0.2.4"
ethercat-esi = "0.2.0"
log = "0.4.17"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9.11"
env_logger = "0.9.0"

[features]
default = ["verify_mailboxes"]
verify_mailboxes = []