[package]
name = "poulpe_ethercat_controller"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitvec = "1.0.1"
num = "0.4.0"
num-traits = "0.2.15"
num-derive = "0.3.3"
ethercat_controller = { path = "../ethercat_controller" }
log = "0.4.17"
env_logger = "0.9.0"


[features]
default = ["verify_orbita_type", "allow_partial_network", "safe_turn_on", "trun_off_slaves_setup"]
verify_orbita_type = [] # This feature is used to verify the type of the Orbita device connected to the EtherCAT network
                        # Verifies if the yaml file specifies the correct type of the Orbita device connected to the network (orbita2d = 2 and orbita3d = 3)
                        # If not specified this check is not performed

allow_partial_network = []  # This feature enables to instantiate the ethercat master that talks to only a part of the EtherCAT slaves connected to the network 
                            # If not specified yaml file should specify all the slaves connected to the network

safe_turn_on = [] # setting the current position to the target position on torque on

switchon_on_turnon = [] # on eacth turn on call the switch on command is sent to the slaves as well (this is not recommended but can be used for debugging or to make the switch on more robust)

trun_off_slaves_setup = [] # This feature is used to turn off the slaves connected to the network