[package]
name = "poulpe_ethercat_grpc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poulpe_ethercat_controller = { path = "../poulpe_ethercat_controller" }
log = "0.4.17"
env_logger = "0.9.0"
tonic = "0.11"
prost = "0.12"
tokio = { version = "1.21.0", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1.9"
async-stream = "0.3.3"
prost-types = { version = "0.12" }

[build-dependencies]
tonic-build = {version = "0.11", features = ["prost"]}

[[bin]]
name = "server"
path = "src/server.rs"

[features]
default = ["stop_stack_on_slave_fault"] # recover_from_error]
recover_from_error = []
stop_stack_on_slave_fault = []
