[package]
name = "poulpe_ethercat_grpc"
version = "0.1.0"
edition = "2021"
default-run = "server"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poulpe_ethercat_controller = { path = "../poulpe_ethercat_controller" }
log = "0.4.17"
env_logger = "0.9.0"
tonic = "0.11"
prost = "0.12"
tokio = { version = "1.21.0", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1.9"
async-stream = "0.3.3"
prost-types = { version = "0.12" }

[build-dependencies]
tonic-build = {version = "0.11", features = ["prost"]}

[[bin]]
name = "server"
path = "src/server.rs"

[features]
default = ["qucik_stop_on_slave_fault", "stop_client_on_server_timeout"] 

stop_server_on_actuator_error = []  # If this feature is set the server will stop the operation on any error that occurs
                                    # Server will stop operation if any of the slaves is in fault state

stop_client_on_server_timeout = []  # If this feature is set the client will stop the operation if the server does not respond for more than 1 second

qucik_stop_on_slave_fault = []      # If this feature is set the server will not stop the operation if the slaves are in fault state
                                    # The server will continue to operate on all slaves but it will send the emergency stop command to the slaves
                                    # If the feature `stop_server_on_actuator_error` is set the server will stop the operation after then emergency stop command is sent to the slaves