[package]
name = "python_client"
version = "0.1.0"
edition = "2021"

[dependencies]
pyo3 = { version = "0.21.2", features = ["extension-module"] }
poulpe_ethercat_multiplexer = { path = "../poulpe_ethercat_multiplexer" }
log = "0.4.17"
env_logger = "0.9.0"
tonic = "0.8.0"
prost = "0.11.0"
tokio = { version = "1.21.0", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1.9"
async-stream = "0.3.3"

[lib]
name = "python_client"
path = "src/lib.rs"
crate-type = ["cdylib"]